--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/button": "2.0.18",
+    "@nextui-org/card": "^2.0.20",
     "@nextui-org/code": "2.0.16",
+    "@nextui-org/image": "^2.0.20",
     "@nextui-org/input": "2.1.6",
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
@@ -26,6 +28,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
