--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/link": "2.0.19",
     "@nextui-org/navbar": "2.0.19",
     "@nextui-org/snippet": "2.0.22",
+    "@nextui-org/spinner": "^2.0.19",
     "@nextui-org/switch": "2.0.18",
     "@nextui-org/system": "2.0.7",
     "@nextui-org/theme": "2.1.6",
