--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/avatar": "^2.0.21",
     "@nextui-org/button": "2.0.18",
     "@nextui-org/card": "^2.0.20",
+    "@nextui-org/checkbox": "^2.0.22",
     "@nextui-org/code": "2.0.16",
     "@nextui-org/divider": "^2.0.20",
+    "@nextui-org/dropdown": "^2.1.10",
     "@nextui-org/image": "^2.0.20",
-    "@nextui-org/input": "2.1.6",
+    "@nextui-org/input": "^2.1.6",
     "@nextui-org/kbd": "2.0.17",
     "@nextui-org/link": "2.0.19",
+    "@nextui-org/modal": "^2.0.23",
     "@nextui-org/navbar": "2.0.19",
     "@nextui-org/snippet": "2.0.22",
     "@nextui-org/spinner": "^2.0.19",
@@ -32,14 +36,16 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.4",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.5.0",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
