--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 BASE_URL=a-news-app-api-base-url
 API_KEY=that-news-app-api-key
+
+# FIREBASE APP CONFIGURATION
+NEXT_PUBLIC_FIREBASE_API_KEY=your-firebase-web-app-config-api-key
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-firebase-web-app-config-auth-domain
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-firebase-web-app-config-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-firebase-web-app-config-storage-bucket
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-firebase-web-app-config-messaging-sender-id
+NEXT_PUBLIC_FIREBASE_APP_ID=1:your-firebase-web-app-config-app-id
