--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "^13.5.4",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.2",
+    "html-react-parser": "^5.1.10",
     "intl-messageformat": "^10.5.0",
     "next": "^13.5.4",
     "next-themes": "^0.2.1",
